--- a/index.css
+++ b/index.css
@@ -1,5 +1,20 @@
+
 #heading1{
     color: blue;
+}
+.restro-container{
+    width:100%
+}
+.restro-card{
+    flex-wrap: wrap;
+    width:250px;
+    margin: 20px;
+    /* border:2px solid black; */
+    /* overflow: hidden; */
+    text-wrap:wrap ;
+} 
+.carddata{
+    padding: 2px 5px;
 }
 .header{
     /* flex-direction: row; */
@@ -20,22 +35,17 @@ margin-top: -13px;
     flex-direction:row;
     gap:50px;
     list-style-type:none;
-    padding:0px 20px
+    padding:15px 20px
 }
 .nav-items>ul>li{
     font-size: 18px;
 }
- .restro-card{
-    /* display: flex;
-    flex-direction:column; */
-    flex-wrap: wrap;
-    width:210px;
-    margin: 20px;
-} 
  .cards{
     display: flex;
     flex-direction:row;
     flex-wrap: wrap;
+    width: 100%;
+    padding-left:25px;
 } 
 .restro-card:hover{
     border:1px solid black;
@@ -48,7 +58,10 @@ margin-top: -13px;
     border-style: none;
 }
 .restro-img{
-    width:200px;
+    width:250px;
     height: 150px;
-    border-radius: 15px;
+    border-radius:15px;
+}
+.cuisines{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
